# AI-News-Aggregator

./: pyproject.toml
app/: __init__.py
app/scrapers/: Youtube_Scraper.py  __init__.py
tests/: test_youtube_scraper_integration.py
