[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.11.0",
    "feedparser>=6.0.12",
    "markdown>=3.10",
    "mypy>=1.18.2",
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires network)",
    "slow: marks tests as slow running",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
